# quant-trading-knowledge-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: __init__.py  main.py
app/api/: chat.py  health.py  knowledge.py
app/core/: config.py  prompts.py  safety.py
app/models/: chat.py  knowledge.py  signal.py
app/services/: __init__.py  answer_service.py  embedding_service.py  ingestion_service.py  llm_service.py  retrieval_service.py  vector_store.py
data/: README.md
data/samples/: knowledge_chunks.example.jsonl
docs/: ANSWER_POLICY.md  API_USAGE.md  ARCHITECTURE.md  KNOWLEDGE_CHUNK_SCHEMA.md  ROADMAP.md  UPGRADE_PLAN.md
food/: 短线交易秘诀.txt
scripts/: generate_qa.py  import_chunks.py  process_books.py
tests/: __init__.py  test_health.py  test_safety.py
