[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "quant-trading-knowledge-assistant"
version = "0.1.0"
description = "RAG service for professional quantitative trading knowledge Q&A."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "openai>=1.50.0,<3.0.0",
  "qdrant-client>=1.11.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "rank-bm25>=0.3.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]
scripts = [
  "pypdf>=4.0.0,<6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
